--- a/src/style/Button.module.css
+++ b/src/style/Button.module.css
@@ -2,8 +2,9 @@
     background-color: red;
     border-radius: 5px;
     color: white;
-    padding: 10px;
+    padding: 5px;
     text-decoration: none;
+    margin-right: 5px;
 
 }
 
